# streuen

./: Cargo.toml  README.md
crates/chat/: Cargo.toml
crates/chat-cli/: Cargo.toml  README.md
crates/chat-cli/src/: app.rs  event.rs  lib.rs  main.rs  ui.rs
crates/chat-cli/src/config/: mod.rs
crates/chat-cli/src/ui/: chats.rs  home.rs  nav.rs  settings.rs
crates/chat-web/: Cargo.toml  README.md  index.scss
crates/chat-web/src/: app.rs  lib.rs  libp2p.rs  main.rs
crates/chat-web/src/chat/: messages.rs  mod.rs  navigation.rs  settings_menu.rs  users_panel.rs  window.rs
crates/chat/src/: lib.rs
crates/chat/src/app/: error.rs  messages.rs  mod.rs  users.rs
crates/chat/src/libp2p/: behavior.rs  behaviour.rs  mod.rs
crates/storage/: Cargo.toml
crates/text/: Cargo.toml
crates/text/src/: chat_window.rs  libp2p.rs  main.rs  users_panel.rs
crates/text/src/chat/: mod.rs  navigation.rs
crates/text/src/libp2p/: behavior.rs  proto_codec.rs
