[workspace]
members = [
    "crates/storage",
    "crates/text",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
rust-version = "1.88.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.46.1", default-features = false }
libp2p = "0.56.0"
libp2p-webrtc-websys = "0.4.0"
web-sys = "0.3.45"
multiaddr = "0.18.1"
multihash = "0.19.1"
yew = "0.21.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
getrandom = "0.3"
serde = "1.0"
