[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
rust-version = "1.88.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.80"
color-eyre = "0.6.3"
crossterm = "0.28.1" # this version has to match the one used by ratatui
directories = "6.0.0"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-timer = "3.0.3"
getrandom = "0.3"
libp2p = "0.56.0"
multiaddr = "0.18.1"
multihash = "0.19.1"
ratatui = "0.29.0"
serde = "1.0"
streuen-chat = { path = "crates/chat" }
thiserror = "2.0.12"
tokio = { version = "1.46.1", default-features = false }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.45"
yew = "0.21.0"
