[package]
name = "streuen-chat-web"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
futures-timer = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
serde = { workspace = true, features = ["derive"] }
streuen-chat = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-wasm = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
yew = { workspace = true, features = ["csr"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.libp2p]
workspace = true
features = [
    "ed25519",
    "ecdsa",
    "secp256k1",
    "identify",
    "ping",
    "wasm-bindgen",
    "macros",
    "kad",
    "webrtc-websys",
    "websocket-websys",
    "request-response",
    "cbor",
    "kad",
    "dcutr",
    "gossipsub",
    "relay",
    "rendezvous",
    "noise",
    "yamux",
    "tls",
]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
workspace = true
features = [
    "Clipboard",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
]
