[package]
name = "streuen-chat"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
futures-timer = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.libp2p]
workspace = true
features = [
    "ed25519",
    "ecdsa",
    "secp256k1",
    "identify",
    "ping",
    "wasm-bindgen",
    "macros",
    "kad",
    "request-response",
    "cbor",
    "kad",
    "dcutr",
    "gossipsub",
    "relay",
    "rendezvous",
    "dcutr",
    "autonat",
    "upnp",
    "mdns",
    "noise",
    "yamux",
    "tls",
    "tokio",
    "tcp",
    "quic",
    "dns",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
tracing-wasm = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.libp2p]
workspace = true
features = [
    "ed25519",
    "ecdsa",
    "secp256k1",
    "identify",
    "ping",
    "wasm-bindgen",
    "macros",
    "kad",
    "webrtc-websys",
    "websocket-websys",
    "request-response",
    "cbor",
    "kad",
    "dcutr",
    "gossipsub",
    "relay",
    "rendezvous",
    "dcutr",
    "autonat",
    "upnp",
    "mdns",
    "noise",
    "yamux",
]
