[package]
name = "text"
version.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
yew = { workspace = true, features = ["csr"] }
getrandom = { workspace = true, features = ["wasm_js"] }
serde = { workspace = true, features = ["derive"] }

[dependencies.libp2p]
workspace = true
features = [
    "ed25519",
    "identify",
    "ping",
    "wasm-bindgen",
    "macros",
    "kad",
    "webrtc-websys",
    "websocket-websys",
    "request-response",
    "cbor",
    "kad",
    "dcutr",
    "gossipsub",
    "relay",
    "rendezvous",
    "noise",
    "yamux",
    "tls",
]

[dependencies.web-sys]
workspace = true
features = [
    "console",
    "Clipboard",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
]
